# spell_checker

./: .gitignore  Cargo.toml  README.md
src/: corrector.rs  lib.rs  main.rs
