[package]
name = "spelling_corrector"
version = "0.2.0"
authors = ["NavyaZaveri <navyajayesh+1@gmail.com>"]
edition = "2018"
repository = "https://github.com/NavyaZaveri/spell_checker"
description = "A simple spelling corrector"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = "0.6.19"
regex = "1"
structopt = { version = "0.3", default-features = false }
quicli = "0.4"